--- a/ui/Jenkinsfile
+++ b/ui/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline {
         }
         stage('Test') { 
             steps {
-                sh 'echo Test'
+                sh 'npm run test'
             }
         }
         stage('Production-Build') { 
