--- a/ui/Jenkinsfile
+++ b/ui/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
         stage('Test') { 
             steps {
                 dir("ui"){
-                    sh 'npm run test'
+                    sh 'npm run test-headless'
                 }
             }
         }
