--- a/ui/Jenkinsfile
+++ b/ui/Jenkinsfile
@@ -25,4 +25,9 @@ pipeline {
             }
         }
     }
+    post {
+        always {
+            email body: 'A Test EMail', recipientProviders: [[$class: 'nagcloudlab@gmail.com'], [$class: 'nagcloudlab@gmail.com']], subject: 'Test'
+        }
+    }
 }
