--- a/ui/Jenkinsfile
+++ b/ui/Jenkinsfile
@@ -1,7 +1,16 @@
 
 pipeline {
     agent any 
+    environment { 
+        registry = "nagabhushanamn/ui" 
+        registryCredential = 'dockerhub' 
+        dockerImage = '' 
+    }
+
     stages {
+
+        // CI
+
         stage('Install dependencies') { 
             steps {
                 dir("ui"){
@@ -24,10 +33,35 @@ pipeline {
                 }
             }
         }
-    }
-    post {
-        always {
-            emailext body: 'Jenkisn build status', subject: 'TEST', to: 'nagcloudlab@gmail.com'
+
+        // CD
+        stage('docker:build') {
+            steps {
+                dir("ui"){
+                    script { 
+                        dockerImage = docker.build registry + ":$BUILD_NUMBER" 
+                    }
+                }
+            }
         }
+        stage('docker:push') {
+            steps {
+                script { 
+                    docker.withRegistry('', registryCredential ) { 
+                        dockerImage.push() 
+                    }
+                } 
+            }
+        }
+        stage('Cleaning up') { 
+            steps { 
+                sh "docker rmi $registry:$BUILD_NUMBER" 
+            }
+        } 
     }
+    // post {
+    //     always {
+    //         emailext body: 'Jenkisn build status', subject: 'TEST', to: 'nagcloudlab@gmail.com'
+    //     }
+    // }
 }
